Fix missing background color (#168)

--- a/assets/styles/antd-custom.less
+++ b/assets/styles/antd-custom.less
@@ -78,3 +78,9 @@
 .@{layout-prefix-cls}-sider-zero-width-trigger {
   background: @brand-secondary;
 }
+
+//
+// Menu
+//
+
+@menu-inline-submenu-bg: @layout-body-background;
